--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -95,7 +95,7 @@
     </div>
     <div class="hjc_CZQieBox">
         <div class="hdNav_cai_collect" style="display: block;">
-            <div class="hdNav_cai_lhs_expand"><img src="/images/icon-expand.png"></div>
+            <div class="hdNav_cai_lhs_expand"><img src="@ViewBag.osshost/images/icon-expand.png"></div>
             <ul class="hdNav_cai_lhs">
                 <div style="clear:both;"></div>
             </ul>
