--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
@@ -35,7 +35,7 @@
     <div class="hjc_hdNav">
 
         <div class="hdNav_cai_collect">
-            <div class="hdNav_cai_lhs_expand"><img src="/images/icon-expand.png"></div>
+            <div class="hdNav_cai_lhs_expand"><img src="@ViewBag.osshost/images/icon-expand.png"></div>
             <ul class="hdNav_cai_lhs">
 
                 @foreach (LotteryType2 lotteryType in ViewBag.list)
