--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -264,7 +264,7 @@
     </div>
     <div class="info_hdnav LHC_info_YLZB_nav">
         <div class="info_hdNav_cai_collect ">
-            <div class="info_hdNav_cai_lhs_expand"><img src="/images/icon-expand.png"></div>
+            <div class="info_hdNav_cai_lhs_expand"><img src="@ViewBag.osshost/images/icon-expand.png"></div>
             <ul class="info_hdNav_cai_lhs">
                 @foreach (NewsType item in ViewBag.NewsTypeList)
                 {
