--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -223,7 +223,7 @@
                                                 }
                                                 else
                                                 {
-                                                    <img src="~/images/default_avater.png">
+                                                    <img src="@ViewBag.osshost/images/default_avater.png">
                                                 }
                                             </a>
                                         </div>
@@ -251,7 +251,7 @@
                                                 }
                                                 else
                                                 {
-                                                    <img src="~/images/default_avater.png">
+                                                    <img src="@ViewBag.osshost/images/default_avater.png">
                                                 }
                                             </a>
                                         </div>
