--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/InvitationReg.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/InvitationReg.cshtml
@@ -40,21 +40,21 @@
                     <dl>
                         <dd>
                             <a href="javascript:;" onclick="call('wechatFriend')">
-                                <p><img src="~/images/63_1.png" alt="分享到微信好友"></p>
+                                <p><img src="@ViewBag.osshost/images/63_1.png" alt="分享到微信好友"></p>
                                 <p>微信好友</p>
                             </a>
 
                         </dd>
                         <dd>
                             <a href="javascript:;" onclick="call('wechatTimeline')">
-                                <p><img src="~/images/63_2.png" alt="分享到朋友圈"></p>
+                                <p><img src="@ViewBag.osshost/images/63_2.png" alt="分享到朋友圈"></p>
                                 <p>朋友圈</p>
                             </a>
 
                         </dd>
                         <dd>
                             <a href="javascript:;" onclick="call('qqFriend')">
-                                <p><img src="~/images/63_3.png" alt="分享到QQ好友"></p>
+                                <p><img src="@ViewBag.osshost/images/63_3.png" alt="分享到QQ好友"></p>
                                 <p>QQ好友</p>
                             </a>
 
