--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/RewardRules.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/RewardRules.cshtml
@@ -27,7 +27,7 @@
     <div class="Invitation_Box" style="@show">
         <div class="invitation-illustration-title">分享流程</div>
         <div class="invitation-illustration">
-            <img src="~/images/invitation_illustration.png" alt="分享流程图" />
+            <img src="@ViewBag.osshost/images/invitation_illustration.png" alt="分享流程图" />
         </div>
         <div class="invitation-desc">
             <h2>一、活动规则</h2>
