--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set.cshtml
@@ -37,7 +37,7 @@
                         <div class="UpUl_Rtu f-r">
                             @if (string.IsNullOrEmpty(Model.Headpath))
                             {
-                                <img id="head" src="~/images/default_avater.png">
+                                <img id="head" src="@ViewBag.osshost/images/default_avater.png">
                             }
                             else
                             {
