--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set111.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set111.cshtml
@@ -39,7 +39,7 @@
 
                                 @if (string.IsNullOrEmpty(Model.Headpath))
                                 {
-                                    <img id="head" for="upload-file" src="~/images/default_avater.png">
+                                    <img id="head" for="upload-file" src="@ViewBag.osshost/images/default_avater.png">
                                 }
                                 else
                                 {
