--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TakeBet.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/TakeBet.cshtml
@@ -30,7 +30,7 @@
     </div> -->
     <div class="hjc_hdNav">
         <div class="hdNav_cai_collect">
-            <div class="hdNav_cai_lhs_expand"><img src="~/images/icon-expand.png"></div>
+            <div class="hdNav_cai_lhs_expand"><img src="@ViewBag.osshost/images/icon-expand.png"></div>
             <ul class="hdNav_cai_lhs">
                 @if (Model != null)
                 {
@@ -51,14 +51,11 @@
                     }
                 }
 
-                <div style="clear:bothl;"></div>
+                <div style="clear:both;"></div>
             </ul>
         </div>
         <div class="hdNav_cai_expand" style="display:none">
-            @*<div class="hdNav_cai_title">
-                    <span>切换分类</span>
-                    <span class="collect"><img src="~/images/icon-collect.png" alt="" /></span>
-                </div>*@
+           
             <ul class="hdNav_cai">
                 @if (Model != null)
                 {
