--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Task.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Task.cshtml
@@ -49,41 +49,11 @@
                     <div style="clear:both;"></div>
                     @if (item.CompletedCount >= item.Count)
                     {
-                        <div class="Mack_YWC"><img src="~/images/68.png"></div>
+                        <div class="Mack_YWC"><img src="@ViewBag.osshost/images/68.png"></div>
                     }
                 </li>
             }
-            @*<li>
-                    <i class="Mack_icon"></i>
-                    <h3>充值100元（0/1）</h3>
-                    <p>+10金币</p>
-                    <div style="clear:both;"></div>
-                </li>
-                <li>
-                    <i class="Mack_icon"></i>
-                    <h3>评论专家推荐(0/10)</h3>
-                    <p>+1金币</p>
-                    <div style="clear:both;"></div>
-                </li>
-                <li>
-                    <i class="Mack_icon"></i>
-                    <h3>邀请成功注册(0/8)</h3>
-                    <p>+1金币</p>
-                    <div style="clear:both;"></div>
-                </li>
-                <li>
-                    <i class="Mack_icon"></i>
-                    <h3>分享(0/5)</h3>
-                    <p>+1金币</p>
-                    <div style="clear:both;"></div>
-                </li>
-                <li>
-                    <i class="Mack_icon"></i>
-                    <h3>新增粉丝(10/10)</h3>
-                    <p>+1金币</p>
-                    <div style="clear:both;"></div>
-                    <div class="Mack_YWC"><img src="~/images/68.png"></div>
-                </li>*@
+            
         </ul>
     </div>
 
