--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/VoucherRules.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/VoucherRules.cshtml
@@ -32,7 +32,7 @@
             <p>老用户邀请新用户注册成功可获得查看券，新用户注册成功也可获得查看券。</p>
         </div>
         <div class="invitation-illustration">
-            <img src="~/images/w1.png" />
+            <img src="@ViewBag.osshost/images/w1.png" />
         </div>
         <div class="invitation-desc">
             <h2>使用说明</h2>
