--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Explain.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Explain.cshtml
@@ -16,21 +16,21 @@
     <div class="YDY_Box">
         <h2 class="YDY_Btit2">苹果手机app应用显示未受信任打不开怎么解决?不要慌，简单几个步骤即可！</h2>
         <h3 class="YDY_Btit"><span>1</span><font>当我们点击某个软件在苹果手机桌面上弹出此软件未受信任时的对话框。</font></h3>
-        <img src="http://oss.c8.cn/c8/res/img/w15_1.png" class="YDY_tu" />
+        <img src="@ViewBag.osshost/img/w15_1.png" class="YDY_tu" />
         <h3 class="YDY_Btit"><span>2</span><font>这时我们可以点击苹果手机的“设置”图标来进行设置。</font></h3>
-        <img src="http://oss.c8.cn/c8/res/img/w15_2.png" class="YDY_tu" />
+        <img src="@ViewBag.osshost/img/w15_2.png" class="YDY_tu" />
         <h3 class="YDY_Btit"><span>3</span><font>进入“设置”页面后我们稍微下拉该页面，接着点击其中的“通用”按键。</font></h3>
-        <img src="http://oss.c8.cn/c8/res/img/w15_3.png" class="YDY_tu" />
+        <img src="@ViewBag.osshost/img/w15_3.png" class="YDY_tu" />
         <h3 class="YDY_Btit"><span>4</span><font>来到“通用”页面后我们找到页面中的“设备管理”功能后点击该功能。</font></h3>
-        <img src="http://oss.c8.cn/c8/res/img/w15_4.png" class="YDY_tu" />
+        <img src="@ViewBag.osshost/img/w15_4.png" class="YDY_tu" />
         <h3 class="YDY_Btit"><span>5</span><font>在“设备管理”页面会出现手机中不受信任的文件列表，我们点击步骤一的对话框中显示的不受信息文件的企业级应用。</font></h3>
-        <img src="http://oss.c8.cn/c8/res/img/w15_5.png" class="YDY_tu" />
+        <img src="@ViewBag.osshost/img/w15_5.png" class="YDY_tu" />
         <h3 class="YDY_Btit"><span>6</span><font>这时手机会进入该文件的企业级应用页面，我们点击页面中的蓝色按键即可</font></h3>
-        <img src="http://oss.c8.cn/c8/res/img/w15_6.png" class="YDY_tu" />
+        <img src="@ViewBag.osshost/img/w15_6.png" class="YDY_tu" />
         <h3 class="YDY_Btit"><span>7</span><font>之后页面会弹出信任该应用的对话框，我们点击对话框中的红色“信任”按键。</font></h3>
-        <img src="http://oss.c8.cn/c8/res/img/w15_7.png" class="YDY_tu" />
+        <img src="@ViewBag.osshost/img/w15_7.png" class="YDY_tu" />
         <h3 class="YDY_Btit"><span>8</span><font>完成上述操作之后，我们重新点击该APP软件，这时我们就会发现能够顺利进入到该软件当中了。</font></h3>
-        <img src="http://oss.c8.cn/c8/res/img/w15_8.png" class="YDY_tu" />
+        <img src="@ViewBag.osshost/img/w15_8.png" class="YDY_tu" />
     </div>
     <div class="DL_info2" style="margin:30px 10px;">
         <input type="submit" class="DL_if2btn" value="返回首页">
