--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/SetPassword.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/SetPassword.cshtml
@@ -22,7 +22,7 @@
 
     <header class="hjc_header">
         <a href="javascript:history.go(-1);" class="hjc_back"></a>
-        <a href="javascript:;" class="hjc_logo"><img src="~/images/03.png"></a>
+        <a href="javascript:;" class="hjc_logo"><img src="@ViewBag.osshost/images/03.png"></a>
     </header>
 
     <div class="DL_main">
