--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/down.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/down.cshtml
@@ -25,11 +25,11 @@
 <body>
    
     <div class="XZ_Pag">
-        <img src="http://oss.c8.cn/c8/res/img/w14_1.png" class="Pag_BGtu">
+        <img src="@ViewBag.osshost/img/w14_1.png" class="Pag_BGtu">
         <div class="Pag_LJ">
             <ul class="LJ_ul">
-                <li class="LJ_Left f-l"><a onclick="getdown(1);" href="javascript:;"><img src="http://oss.c8.cn/c8/res/img/w14_2.png"></a></li>
-                <li class="LJ_Right f-r"><a onclick="getdown(2);" href="javascript:;"><img src="http://oss.c8.cn/c8/res/img/w14_3.png"></a></li>
+                <li class="LJ_Left f-l"><a onclick="getdown(1);" href="javascript:;"><img src="@ViewBag.osshost/img/w14_2.png"></a></li>
+                <li class="LJ_Right f-r"><a onclick="getdown(2);" href="javascript:;"><img src="@ViewBag.osshost/img/w14_3.png"></a></li>
                 <div style="clear:both;"></div>
             </ul>
             <p class="LJ_Font">
