--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="@ViewBag.osshost/js/luo/hammer.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/luo/picmax.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
+    <script src="@ViewBag.osshost/js/news/clearuc.js"></script>
     <script>
         var newstypeid=@newsType.Id,CityId=@CityId;
     </script>
