--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/BlackList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/BlackList.cshtml
@@ -85,6 +85,9 @@
         </article>
     </div>
     <script src="/Scripts/jquery-1.8.0.min.js"></script>
+    <script type="text/javascript">
+        var roomId = "@ViewBag.RoomId";
+    </script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/BlackList.js"></script>
 
 </body>
