--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -8845,6 +8845,15 @@ footer {
 .YDY_Btit font{ font-size:14px; margin-left:5px; color:#333;}
 .YDY_Btit2{font-weight: normal;font-size: 15px;padding: 5px 0px;margin-top: 5px;}
 
+.spinner {width: 50px;height: 60px;text-align: center;font-size: 10px;position:fixed;top:200px;left:40%}
+.spinner > div {background-color: #f13131;height: 100%;width: 6px;display: inline-block; -webkit-animation: stretchdelay 1.2s infinite ease-in-out;animation: stretchdelay 1.2s infinite ease-in-out;} 
+.spinner .rect2 {-webkit-animation-delay: -1.1s;animation-delay: -1.1s;}
+.spinner .rect3 {-webkit-animation-delay: -1.0s;animation-delay: -1.0s;}
+.spinner .rect4 {-webkit-animation-delay: -0.9s;animation-delay: -0.9s;}
+.spinner .rect5 {-webkit-animation-delay: -0.8s;animation-delay: -0.8s;}
+@-webkit-keyframes stretchdelay {0%, 40%, 100% { -webkit-transform: scaleY(0.4) } 20% { -webkit-transform: scaleY(1.0) }}
+@keyframes stretchdelay {0%, 40%, 100% {transform: scaleY(0.4);-webkit-transform: scaleY(0.4);}  20% {transform: scaleY(1.0);-webkit-transform: scaleY(1.0);}}
+
 
 
 
