--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewIndex.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewIndex.cshtml
@@ -14,7 +14,7 @@
     <meta name="description" content="@ViewBag.SEOInfo[2]">
     <link rel="stylesheet" href="@ViewBag.osshost/css/dropload.css" />
     <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/dialog.css" />
-    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css?v=1.1" />
     <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/c8-icon.css" />
 </head>
 <body style="background:#F4F4F5;">
@@ -92,10 +92,10 @@
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/news/newsruntime.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
-    <script src="@ViewBag.osshost/js/news/index.js"></script>
+    <script src="@ViewBag.osshost/js/news/index.js?v=1.1"></script>
     @if (ViewBag.lType == 5)
     {
-        <script src="@ViewBag.osshost/js/news/dynamic.js"></script>
+        <script src="@ViewBag.osshost/js/news/dynamic.js?v=1.1"></script>
     }
 </body>
 </html>
