--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/dropload.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/dropload.css
@@ -8,7 +8,7 @@
     transform:translateZ(0);
 }
 .dropload-down{
-    height: 50px;
+    height: auto;
 }
 .dropload-refresh,.dropload-update,.dropload-load,.dropload-noData{
     height: 50px;
